[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/scripts/Interface.gd" type="Script" id=1]

[node name="Interface" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ScoreLabel" type="Label" parent="."]
margin_left = 244.189
margin_top = 22.6101
margin_right = 284.189
margin_bottom = 53.6101
rect_scale = Vector2( 3.77931, 4.03575 )
custom_colors/font_color = Color( 0.890196, 0.913725, 0.890196, 1 )
custom_colors/font_outline_modulate = Color( 0.772549, 0.811765, 0.788235, 1 )
custom_colors/font_color_shadow = Color( 0.0666667, 0.886275, 0.0666667, 1 )
text = "0
"
align = 1
valign = 1

[node name="Message" type="Label" parent="."]
margin_left = 119.08
margin_top = 471.797
margin_right = 196.08
margin_bottom = 485.797
grow_horizontal = 0
rect_scale = Vector2( 5.08852, 4.29995 )
text = "SpaceWreck"
uppercase = true

[node name="Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -105.484
margin_top = -131.543
margin_right = -93.4844
margin_bottom = -111.543
rect_scale = Vector2( 5.39832, 3.49393 )
text = "PLAY"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
